# jetpack-camera-app

./: .conflict-files  .editorconfig  .gitignore  GEMINI.md  README.md  build.gradle  build.gradle.kts  build_err.txt  build_error.txt  gemini_cli_interaction_guide.md  gh_comments.json  gradle.properties  gradlew  pr537.diff  pr_line_comments.json  run-spotless.skill  runs-on.cfg  settings.gradle  settings.gradle.kts
.auto-resolution/hooks/: pre-commit
.conflict-side-0/: build.gradle.kts
.conflict-side-1/gradle/: init.gradle.kts  libs.versions.toml
.conflict-side-1/spotless/: copyright.kt
.gemini/: styleguide.md
.github/workflows/: BuildAndTest.yaml  ChooseRunner.yaml  MergeToMainWorkflow.yaml  PullRequestWorkflow.yaml  PushWorkflow.yaml
app/: build.gradle  build.gradle.kts
benchmark/: build.gradle.kts
camera-viewfinder-compose/: build.gradle  build.gradle.kts
camerax/: build.gradle
cli_output/: temcguir_update_capture_button_appearance_20260720_174842.md
core/camera/: build.gradle.kts
core/common/: build.gradle  build.gradle.kts
core/model/: build.gradle.kts  consumer-rules.pro
core/model-proto/: build.gradle.kts
core/settings/: build.gradle.kts  consumer-rules.pro
data/camera/: build.gradle  build.gradle.kts
data/common/: build.gradle.kts  consumer-rules.pro
data/media/: build.gradle.kts
data/model/: build.gradle.kts
data/settings/: build.gradle  (+2 more)
domain/camera/src/main/cpp/: CMakeLists.txt  jni.lds  jni_hooks.cpp  opengl_debug_jni.cpp
gradle/: init.gradle.kts  libs.versions.toml
spotless/: copyright.kts  copyright.xml
(+1066 files in other folders)
